--- a/SAO-EP/Src/View LR.fx.yaml
+++ b/SAO-EP/Src/View LR.fx.yaml
@@ -76,6 +76,7 @@
 
                 Dropdown1 As dropdown:
                     AlignInContainer: =AlignInContainer.Stretch
+                    ChevronBackground: =RGBA(9, 33, 98, 1)
                     Height: =65
                     Items: =Organizations
                     Visible: =If(CurrentUser.userRoles.Id > 1, false, true)
@@ -319,7 +320,7 @@
 
                     Rectangle1_2 As rectangle:
                         BorderColor: =RGBA(0, 0, 0, 0)
-                        Fill: =RGBA(0, 120, 212, 1)
+                        Fill: =RGBA(9, 33, 98, 1)
                         Height: =Parent.TemplateHeight - Separator1_1.Height
                         OnSelect: =Select(Parent)
                         Visible: =ThisItem.IsSelected
@@ -2199,6 +2200,7 @@
                             ZIndex: =7
 
                             Button4_1 As button:
+                                Fill: =RGBA(9, 33, 98, 1)
                                 Height: =90
                                 OnSelect: |-
                                     =Set(dispViewItemsBought,true);
@@ -2227,7 +2229,7 @@
                                         Set(ItemsType, "HBTO")
                                     )
                                 Width: =45
-                                X: =831
+                                X: =822
                                 Y: =240
                                 ZIndex: =3
 
