--- a/SAO-EP/Src/ApprovalDraft.fx.yaml
+++ b/SAO-EP/Src/ApprovalDraft.fx.yaml
@@ -29,6 +29,7 @@
             ZIndex: =2
 
             Header1 As Header:
+                BasePaletteColor: =
                 DisplayMode: =DisplayMode.Edit
                 Height: =75
                 LayoutMinHeight: =75
