--- a/SAO-EP/Src/Reports_1.fx.yaml
+++ b/SAO-EP/Src/Reports_1.fx.yaml
@@ -96,7 +96,7 @@
                     0,
                     LookUp(
                         LocalLR,
-                        ThisRecord.APF_ID_Num = APF_ID_Num,
+                        ThisRecord.APF_ID_Num = ID_Num,
                         CashAdvAmt
                     )
                 )
